k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: pythondemo
  labels:
    app: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: raunakvkhatri/python-app:v2
        ports:
        - containerPort: 5050
        livenessProbe:
          httpGet:
            path: /api/v1/healthz
            port: 5050
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v1/healthz
            port: 5050
          initialDelaySeconds: 5
          periodSeconds: 5
