k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: pythondemo
  labels:
    app: python-app
spec:
  selector:
    app: python-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5050
  type: ClusterIP
